fix: frontend 연결 오류 수정